--- a/totoro.html
+++ b/totoro.html
@@ -18,8 +18,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+        <li><a href="totoro.html">☂Totoro☂</a></li>
+        <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
       </ul>
     </nav>
 
