menu name changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="totoro.html">☂Totoro☂</a></li>
         <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
-        <li><a href="kiki.html">kiki</a></li>
+        <li><a href="kiki.html">Kiki</a></li>
       </ul>
     </nav>
 
@@ -48,7 +48,7 @@ What is Ghibli?
 
     <footer>
       <hr />
-      <p class="smalltext">--Emmauscollege; 2022✧･ﾟ:  </p>
+      <p class="smalltext">--Emmauscollege; 2022✧･ﾟ: </p>
     </footer>
 
   </div>
