--- a/ponyo.html
+++ b/ponyo.html
@@ -15,8 +15,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="overmij.html">Over mij</a></li>
+        <li><a href="totoro.html">☂Totoro☂</a></li>
         <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
+        <li><a href="kiki.html">Kiki</a></li>
       </ul>
     </nav>
 
