--- a/totoro.html
+++ b/totoro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="nl">
+<html lang="en">
 
 <head>
   <link rel="stylesheet" href="style.css" />
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1>Wil je meer van mij weten?</h1>
+      <h1>Totoro</h1>
     </header>
 
     <nav>
@@ -20,29 +20,17 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="totoro.html">☂Totoro☂</a></li>
         <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
+        <li><a href="kiki.html">Kiki</a></li>
       </ul>
     </nav>
 
     <main>
-      <p>De persoonlijkheid is een begrip uit de psychologie en omvat een dynamisch en georganiseerd geheel van
-        karakteristieken (voelen, denken, doen) die aan een persoon kunnen worden toegekend. Dit geheel van
-        eigenschappen beschrijft de manier waarop een persoon in verschillende situaties zal reageren, de manier waarop
-        hij denkt, en waardoor hij gemotiveerd zal worden.</p>
-      <p>De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is
-        ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het
-        verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt
-        tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij
-        onveranderlijke) aard van die persoon wordt beschouwd.</p>
-      <p>De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en
-        gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop
-        iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende
-        situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de
-        levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
+    
     </main>
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">--Emmauscollege; 2022✧･ﾟ: </p>
     </footer>
 
   </div>
