changed ponyo page and removed a mistake

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
   
-<body>
-<div class="page">
+<body class="homebody">
+<div>
 
     <header>
       <h1 id="hoofdtitel" class="belangrijk"> *.｡Ghibli Movies.｡*</h1>
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="totoro.html">☂Totoro☂</a></li>
+        <li><a href="totoro.html">Totoro</a></li>
         <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
         <li><a href="kiki.html">Kiki</a></li>
       </ul>
