--- a/kiki.html
+++ b/kiki.html
@@ -13,13 +13,13 @@
 <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk"> *.｡Ghibli Movies.｡*</h1>
+      <h1 id="hoofdtitel" class="belangrijk"> Kiki</h1>
     </header>
 
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="totoro.html">☂Totoro☂</a></li>
+        <li><a href="totoro.html">Totoro</a></li>
         <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
         <li><a href="kiki.html">Kiki</a></li>
       </ul>
