--- a/totoro.html
+++ b/totoro.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-
+<!DOCTYPE HTML>
+<html class="totorobody">
 
 <head>
   <link rel="stylesheet" href="style.css" />
@@ -7,7 +7,11 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+
+  
+<body class="totorobody">
+
+  
   <div class="page">
 
     <header>
@@ -25,7 +29,7 @@
 
     <main>
     
-
+<h1 class="totoro"> My Neighbor Totoro</h1>
       
     </main>
 
