--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@ What is Ghibli?
 </h2>
 
 
-      <p>
-        lbablalbababalbablalabblablablablaalb
+      <p class="text1">
+        lbablalbababalbablalabblablablablaalblbablalbababa
+        lbablalabblablablablaalblbablalbababalbabl
+        alabblablablablaalblbablalbababalbablalabblablablablaalblbablalbababalbablalabblab
+        ablablaalblbablalbababalbablalabblablablablaalblbablalbababalbablalabblablablablaalb
     </p>
  <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" >
 </div>
