added n chanced pages

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="totoro.html">Totoro</a></li>
-        <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
-        <li><a href="kiki.html">Kiki</a></li>
+        <li><a href="totoro.html">☂Totoro☂</a></li>
+        <li><a href="ponyo.html">Ponyo∘˚˳°∘°</a></li>
+        <li><a href="kiki.html">Kiki =^._.^=∫</a></li>
       </ul>
     </nav>
 
