--- a/kiki.html
+++ b/kiki.html
@@ -13,15 +13,15 @@
 <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk"> Kiki</h1>
+      <h1 id="hoofdtitel" class="belangrijk">*.｡Ghibli Movies.｡*</h1>
     </header>
 
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="totoro.html">Totoro</a></li>
-        <li><a href="ponyo.html">∘˚˳°∘°Ponyo∘˚˳°∘°</a></li>
-        <li><a href="kiki.html">Kiki</a></li>
+        <li><a href="totoro.html">☂Totoro☂</a></li>
+        <li><a href="ponyo.html">Ponyo∘˚˳°∘°</a></li>
+        <li><a href="kiki.html">Kiki =^._.^=∫</a></li>
       </ul>
     </nav>
 
@@ -29,6 +29,127 @@
     
  </main>
 
+      <div>
+        <h1 class="title">Kiki's delivery service</h1>
+
+   
+      </div>
+
+      <h2 class="totorotitle">
+        Information about the movie
+      </h2>
+
+
+
+      <div class="boxtotoromovie">
+
+        <div class="totoromovie left">
+          <img class=totoromovie src="https://cdn.amightygirl.com/catalog/product/cache/1/image/602f0fa2c1f0d1ba5e241f914e856ff9/k/i/kiki-delivery-service-new.jpg">
+
+
+        </div>
+
+
+        <div class="text1 left text2">
+
+          <h3>❀Stats</h3>
+          <ul style="list-style-type:circle;">
+            <li>❀Date of release: April 16th 1988</li>
+            <li>❀IMDb rating: 8,1/10</li>
+            <li>❀Rotten Tomatoes rating (Tomatometer): 95%</li>
+            <li>❀Genre: Fantasy Film / Animation</li>
+          </ul>
+
+          <br>
+
+          <h3>✧Awards✧</h3>
+          <ul>
+            <li> ✧Kinema Junpo Award for Best Film of the Year (1989)</li>
+            <li> ✧Kinema Junpo Award for Best Japaneese Film of the Year (1989)</li>
+            <li> ✧Mainichi Eiga Concours Award for Best Film (1989) </li>
+            <li> ✧Mainichi Eiga Concours Award for Ofuji Noburo (1989) </li>
+
+
+          </ul>
+
+
+
+        </div>
+
+      </div>
+
+
+
+
+      <h2 class="totorotitle">
+        Storyline
+      </h2>
+
+
+
+      <div class="boxtotoromaking">
+
+        <div class="totorostoryline right">
+          <img class=totorostoryline src="https://i.giphy.com/media/l41lT4n6ylgZnDY88/giphy.webp">
+
+
+        </div>
+
+
+        <div class="text0 left">
+          <p>
+            n 1991 maakten het bedrijf en Ierland belastingafspraken die zeer gunstig voor Apple waren.[28] De Europese
+            Commissie (EC) deed hier onderzoek naar en kwam in 2016 tot de conclusie dat het belastingvoordeel
+            vergelijkbaar is met illegale staatssteun. Volgens de commissie betaalde Apple in 2003 effectief 1%
+            belasting en in 2014 slechts 0,005%.[28] Apple liet zijn internationale winst via Ierland lopen, om de
+            belastingbetalingen te minimaliseren. De EC eiste dat Ierland ruim 13 miljard euro aan achterstallige
+            belasting bij Apple zou innen. Beide gingen in beroep tegen het besluit van de EC. Zolang het Europees Hof
+            van Justitie nog geen uitspraak had gedaan, stond het miljardenbedrag op een neutrale tussenrekening.[28] Op
+            15 juli 2020 vernietigde het Europees Hof de beslissing van de Europese Commissie: Apple hoefde de 13
+            miljard euro niet aan Ierland terug te betalen.
+
+            Mariana Mazzucato heeft in haar boek ‘’The entrepreneurial state’’ (2013) benadrukt dat
+            overheidsinvesteringen in de ontwikkeling van de diverse technologieën (internet, gps, het aanraakscherm en
+            draadloze communicatietechnologieën) die door Apple zijn gecombineerd in de iPhone en de iPad, onmisbaar
+            zijn geweest voor het succes van Apple. Dit maakt de lage belastingafdracht door Apple in de ogen van
+            Mazzucato des te meer onterecht. De staat wordt zo niet beloond voor zijn investeringen in onderzoek dat tot
+            deze technologieën leidde.
+          </p>
+        </div>
+
+      </div>
+
+ <h2 class="totorotitle">
+        Making of the movie
+      </h2>
+
+
+
+      <div class="boxtotoromaking">
+
+
+        <div class="left">
+          <p>
+            n 1991 maakten het bedrijf en Ierland belastingafspraken die zeer gunstig voor Apple waren.[28] De Europese
+            Commissie (EC) deed hier onderzoek naar en kwam in 2016 tot de conclusie dat het belastingvoordeel
+            vergelijkbaar is met illegale staatssteun. Volgens de commissie betaalde Apple in 2003 effectief 1%
+            belasting en in 2014 slechts 0,005%.[28] Apple liet zijn internationale winst via Ierland lopen, om de
+            belastingbetalingen te minimaliseren. De EC eiste dat Ierland ruim 13 miljard euro aan achterstallige
+            belasting bij Apple zou innen. Beide gingen in beroep tegen het besluit van de EC. Zolang het Europees Hof
+            van Justitie nog geen uitspraak had gedaan, stond het miljardenbedrag op een neutrale tussenrekening.[28] Op
+            15 juli 2020 vernietigde het Europees Hof de beslissing van de Europese Commissie: Apple hoefde de 13
+            miljard euro niet aan Ierland terug te betalen.
+
+            Mariana Mazzucato heeft in haar boek ‘’The entrepreneurial state’’ (2013) benadrukt dat
+            overheidsinvesteringen in de ontwikkeling van de diverse technologieën (internet, gps, het aanraakscherm en
+            draadloze communicatietechnologieën) die door Apple zijn gecombineerd in de iPhone en de iPad, onmisbaar
+            zijn geweest voor het succes van Apple. Dit maakt de lage belastingafdracht door Apple in de ogen van
+            Mazzucato des te meer onterecht. De staat wordt zo niet beloond voor zijn investeringen in onderzoek dat tot
+            deze technologieën leidde.
+          </p>
+        </div>
+
+      </div>
     <footer>
       <hr />
       <p class="smalltext">--Emmauscollege; 2022✧･ﾟ: </p>
