--- a/ponyo.html
+++ b/ponyo.html
@@ -89,7 +89,7 @@
 
 <br>
 
-      <h2 class="totorotitle">
+      <h2 class="title">
         Storyline
       </h2>
 
@@ -104,7 +104,7 @@
         </div>
 
 
-        <div class="text0 left">
+        <div class="text0 left big">
           <p>
             Ponyo on the Cliff by the Sea is Miyazaki's own unique take on Hans Christian Anderson's tale, "The Little Mermaid". It tells the story of a young girl fish who defies her father's wishes and beliefs about the human world to live with the boy she loves. After covertly travelling to the surface by jellyfish, Ponyo becomes stranded near a house on a seaside cliff, where she is found and rescued by a human boy named Sosuke. Sosuke names her Ponyo, and takes her to his school in a bucket, and shows her to the little old ladies who live in the nursing home where his mother, Lisa, works. Imajine Sosuke's surprise when Ponyo speaks, and tells him that she likes him!
 <br>
