--- a/ponyo.html
+++ b/ponyo.html
@@ -38,7 +38,7 @@
    
       </div>
 
-      <h2 class="totorotitle">
+      <h2 class="subtitle">
         Information about the movie
       </h2>
 
@@ -47,7 +47,7 @@
       <div class="boxtotoromovie">
 
         <div class="totoromovie left">
-          <img class=totoromovie src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781421530659/ponyo-picture-book-9781421530659_hr.jpg">
+          <img class=totoromovie src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2s6AOAYQWLAVPoHmzDBPm66jrndVpNgpoBso9je4-iLj7vTV6">
 
 
         </div>
@@ -89,7 +89,7 @@
 
 <br>
 
-      <h2 class="title">
+      <h2 class="subtitle">
         Storyline
       </h2>
 
@@ -118,7 +118,7 @@ On the surface, there is a bittersweet moment when Sosuke and Lisa find out that
 Ponyo's sisters, meanwhile, free her from Fujimoto's prison and help her to steal some of their father's magic, so that she can complete her transformation and escape to the surface. This has an immediate knock-on effect of causing a heavy sea storm above. In the midst of this storm, Ponyo and Sosuke are happily reunited. There follows a series of humorous vignettes with Ponyo not-quite-managing to learn to act human, mainly by copying Sosuke. In the morning, however, they discover that the town is flooded, and the citizens have had to take to boats. Ponyo helps Sosuke find a boat, and the two set off to find Lisa, who had left during the storm.
 <br>
             <br>
-The effects of Ponyo's stolen magic cause progressively worse effects, including knocking the moon out of its orbit. This eventually compells Ponyo's mother, a gentle giantess, to intervene and set things right. Sosuke and Lisa are re-united, but Ponyo is again recaptured and returned to fish form. This leads to a meeting between Sosuke and Ponyo's mother, where she gently asks him if he can still love Ponyo, even though she is a fish. Sosuke assures her that he loves Ponyo, no matter what her form is, and Ponyo's mother allows her to remain with Sosuke, which Fujimoto also grudgingly accepts.
+The effects of Ponyo's stolen magic cause progressively worse effects, including knocking the moon out of its orbit. This eventually compells Ponyo's mother, Granmammare, A godess, to intervene and set things right. Sosuke and Lisa are re-united, but Ponyo is again recaptured and returned to fish form. This leads to a meeting between Sosuke and Ponyo's mother, where she gently asks him if he can still love Ponyo, even though she is a fish. Sosuke assures her that he loves Ponyo, no matter what her form is, and Ponyo's mother allows her to remain with Sosuke, which Fujimoto also grudgingly accepts.
           </p>
         </div>
 
@@ -126,8 +126,8 @@ The effects of Ponyo's stolen magic cause progressively worse effects, including
 
         <br>
         <br>
- <h2 class="totorotitle">
-        Making of the movie
+ <h2 class="subtitle">
+        Characters
       </h2>
 
 
@@ -135,26 +135,35 @@ The effects of Ponyo's stolen magic cause progressively worse effects, including
       <div class="boxtotoromaking">
 
 
-        <div class="left">
-          <p>
-            n 1991 maakten het bedrijf en Ierland belastingafspraken die zeer gunstig voor Apple waren.[28] De Europese
-            Commissie (EC) deed hier onderzoek naar en kwam in 2016 tot de conclusie dat het belastingvoordeel
-            vergelijkbaar is met illegale staatssteun. Volgens de commissie betaalde Apple in 2003 effectief 1%
-            belasting en in 2014 slechts 0,005%.[28] Apple liet zijn internationale winst via Ierland lopen, om de
-            belastingbetalingen te minimaliseren. De EC eiste dat Ierland ruim 13 miljard euro aan achterstallige
-            belasting bij Apple zou innen. Beide gingen in beroep tegen het besluit van de EC. Zolang het Europees Hof
-            van Justitie nog geen uitspraak had gedaan, stond het miljardenbedrag op een neutrale tussenrekening.[28] Op
-            15 juli 2020 vernietigde het Europees Hof de beslissing van de Europese Commissie: Apple hoefde de 13
-            miljard euro niet aan Ierland terug te betalen.
+       
+        <div class="gallery">
+    <img src="https://i.pinimg.com/564x/82/33/62/823362281a9f77991231274319d0e689.jpg"  alt="Ponyo, from 'Ponyo'" width="600" height="400">
+  <div class="desc">Ponyo <br> ポニョ <br> Age: 5 </div>
+</div>
 
-            Mariana Mazzucato heeft in haar boek ‘’The entrepreneurial state’’ (2013) benadrukt dat
-            overheidsinvesteringen in de ontwikkeling van de diverse technologieën (internet, gps, het aanraakscherm en
-            draadloze communicatietechnologieën) die door Apple zijn gecombineerd in de iPhone en de iPad, onmisbaar
-            zijn geweest voor het succes van Apple. Dit maakt de lage belastingafdracht door Apple in de ogen van
-            Mazzucato des te meer onterecht. De staat wordt zo niet beloond voor zijn investeringen in onderzoek dat tot
-            deze technologieën leidde.
-          </p>
-        </div>
+<div class="gallery">
+    <img src="https://i.pinimg.com/564x/c7/c7/fb/c7c7fbbbf7e848c1fa2e664509b0abe9.jpg" 
+alt="Sosuke, from 'Ponyo'"
+      width="100" height="400">
+  <div class="desc"> Sosuke <br>そうすけ  <br> Age: 5</div>
+</div>
+
+<div class="gallery">
+    <img src="https://i.pinimg.com/564x/41/6d/8e/416d8e8d4dec1081a4493db21890f831.jpg" alt="Lisa, from 'Ponyo'" width="1050" height="400">
+
+  <div class="desc"> Lisa <br> リサ <br> Age: 25 </div>
+</div>
+
+<div class="gallery">
+    <img src="https://i.pinimg.com/564x/4c/77/47/4c7747022d1a3c25ac5c276c6cbef3e0.jpg" alt="Fujimoto, from 'Ponyo'" width="600" height="400">
+  <div class="desc">Fujimoto <br> フジモト <br> Age: 40+</div>
+</div>
+
+      <div class="gallery">
+    <img src="https://i.pinimg.com/564x/78/e7/75/78e7755b5cd67b01ede5c53ed204602f.jpg" alt="Granmammare, from 'Ponyo'" width="600" height="400">
+  <div class="desc">
+Granmammare <br> グランマンマーレ <br> Age: unknown </div>
+</div>
 
       </div>
 
