--- a/totoro.html
+++ b/totoro.html
@@ -89,7 +89,7 @@
       <br>
 
 
-      <h2 class="totorotitle">
+      <h2 class="subtitle">
         Storyline
       </h2>
 
@@ -107,7 +107,8 @@
 
         <div class="text0 left big">
           <p>
-            The movie My Neighbour Totoro is about two sisters, Satsuki and Mei, who move with their Dad to a house in
+            The movie My Neighbour Totoro is about two sisters, Satsuki and Mei, who move with their Dad, Tatsuo Kusakabe, 
+ to a house in
             the countryside. Their new neighbour happens to be a spiritual tree guardian, Totoro.
             <br>
             <br>
@@ -150,7 +151,7 @@
             <br>
             <br>
             The movie ends in a great way, everyone is happy and healthy; during the credits you see Satsuki and Mei’s
-            mother come home and it is all one big happy family again.
+            mother, Yasuko Kusakabe, come home and it is all one big happy family again.
 
           </p>
         </div>
@@ -160,7 +161,7 @@
 
       <br>
       <br>
-      <h2 class="totorotitle">
+      <h2 class="subtitle">
         Characters
       </h2>
 
@@ -172,27 +173,37 @@
 
 
         <div class="gallery">
-    <img src="http://images6.fanpop.com/image/photos/43000000/My-Neighbor-Totoro-hayao-miyazaki-43027267-540-420.gif"  width="600" height="400">
-  <div class="desc">Satsuki Kusakabe (草壁 サツキ)</div>
+    <img src="https://i.pinimg.com/564x/9a/18/a0/9a18a0f77996569285643ee6ddd29946.jpg"  alt="Satsuki Kusakabe, from 'My Neighbour Totoro'" width="600" height="400">
+  <div class="desc">Satsuki Kusakabe (草壁 サツキ) <br> Age: 10 </div>
 </div>
 
 <div class="gallery">
-    <img src="https://media.tenor.com/qzqSg4uKnPsAAAAC/studio-ghibli.gif" width="1050" height="400">
-  <div class="desc">Add a description of the image here</div>
+    <img src="https://i.pinimg.com/originals/a5/be/80/a5be80d32aa27c56eacd26ac5503320a.jpg" 
+alt="Mei Kusakabe, from 'My Neighbour Totoro'"
+      width="100" height="400">
+  <div class="desc"> Mei Kusakabe <br> 草壁 メイ <br> Age: 4</div>
 </div>
 
 <div class="gallery">
-    <img src="img_lights.jpg" alt="Northern Lights" width="1050" height="400">
+    <img src="https://i.pinimg.com/564x/12/5b/20/125b2092118f29567a54f5e7eee9e261.jpg" alt="Totoro, from 'My Neighbour Totoro'" width="1050" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc"> Totoro <br> 大トトロ <br> Age: 3000+ </div>
 </div>
 
 <div class="gallery">
-    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <img src="https://i.pinimg.com/564x/d0/25/a0/d025a069a368e8bc55d2e52ee3667e2c.jpg" alt="Catbus, from 'My Neighbour Totoro'" width="600" height="">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Catbus <br> ネコバス (nekobasu) <br> Age: Unknown</div>
 </div>
 
+      <div class="gallery">
+    <img src="https://i.pinimg.com/564x/a2/ab/42/a2ab42b3c4933a8a16531e2171e8ed88.jpg" alt="Tatsuo Kusakabe, from 'My Neighbour Totoro'" width="600" height="">
+  </a>
+  <div class="desc">
+Tatsuo Kusakabe <br> 草壁 タツオ <br> Age: 32</div>
+</div>
+
+    
         
       </div>
 
