--- a/kiki.html
+++ b/kiki.html
@@ -3,13 +3,13 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Dit is een eenvoudige website</title>
+  <title>Kiki's Delivery Service </title>
   <meta charset="UTF-8" />
 </head>
 
   
   
-<body>
+<body class="kikibody">
 <div class="page">
 
     <header>
@@ -30,7 +30,7 @@
  </main>
 
       <div>
-        <h1 class="title">Kiki's delivery service</h1>
+        <h1 class="title">Kiki's Delivery Service</h1>
 
    
       </div>
@@ -52,9 +52,12 @@
 
         <div class="text1 left text2">
 
-          <h3>❀Stats</h3>
+          <h3>❀Stats❀</h3>
           <ul style="list-style-type:circle;">
             <li>❀Date of release: April 16th 1988</li>
+           <li>❀Creator / Director: Hayao Miyazaki</li>
+            <li>❀Country of origin: Japan</li>
+            <li>❀Language: Japanese </li>
             <li>❀IMDb rating: 8,1/10</li>
             <li>❀Rotten Tomatoes rating (Tomatometer): 95%</li>
             <li>❀Genre: Fantasy Film / Animation</li>
@@ -90,7 +93,7 @@
       <div class="boxtotoromaking">
 
         <div class="totorostoryline right">
-          <img class=totorostoryline src="https://i.giphy.com/media/l41lT4n6ylgZnDY88/giphy.webp">
+          <img class=totorostoryline src="https://media4.giphy.com/media/h0uYtwIV9liVy/giphy.gif?cid=ecf05e47qak6nxy8venrgcs1rwwey29q7mbmou19cxa1s4iy&rid=giphy.gif&ct=g" height="370">
 
 
         </div>
@@ -98,22 +101,19 @@
 
         <div class="text0 left">
           <p>
-            n 1991 maakten het bedrijf en Ierland belastingafspraken die zeer gunstig voor Apple waren.[28] De Europese
-            Commissie (EC) deed hier onderzoek naar en kwam in 2016 tot de conclusie dat het belastingvoordeel
-            vergelijkbaar is met illegale staatssteun. Volgens de commissie betaalde Apple in 2003 effectief 1%
-            belasting en in 2014 slechts 0,005%.[28] Apple liet zijn internationale winst via Ierland lopen, om de
-            belastingbetalingen te minimaliseren. De EC eiste dat Ierland ruim 13 miljard euro aan achterstallige
-            belasting bij Apple zou innen. Beide gingen in beroep tegen het besluit van de EC. Zolang het Europees Hof
-            van Justitie nog geen uitspraak had gedaan, stond het miljardenbedrag op een neutrale tussenrekening.[28] Op
-            15 juli 2020 vernietigde het Europees Hof de beslissing van de Europese Commissie: Apple hoefde de 13
-            miljard euro niet aan Ierland terug te betalen.
-
-            Mariana Mazzucato heeft in haar boek ‘’The entrepreneurial state’’ (2013) benadrukt dat
-            overheidsinvesteringen in de ontwikkeling van de diverse technologieën (internet, gps, het aanraakscherm en
-            draadloze communicatietechnologieën) die door Apple zijn gecombineerd in de iPhone en de iPad, onmisbaar
-            zijn geweest voor het succes van Apple. Dit maakt de lage belastingafdracht door Apple in de ogen van
-            Mazzucato des te meer onterecht. De staat wordt zo niet beloond voor zijn investeringen in onderzoek dat tot
-            deze technologieën leidde.
+            Kiki is a smart and perky 13-year-old girl who lives with her mother, who is witch, and her father. She is a bit of a dreamer and a sensitive soul as evidenced by the scene in which we see her lying in a field watching the clouds drift by. But it is time for her to find her own way in the world as a witch: that means spending a year in training on her own in another city. Whereas many of today's anxious parents would not think of letting their teenage child travel to a strange place unaccompanied by an adult, Kiki's parents are delighted with the prospect of her coming to terms with her powers and testing her mettle. Her dad says goodbye to his "princess" while her mother insists that she take her special broom for flying.
+<br> 
+            <br>
+On the journey to her undetermined destination, Kiki startles her black cat Jiji with her bouncy takeoffs. They carry on conversations with the feline offering humorous takes on situations. Kiki meets a snobbish young witch on her way home from her year's training. Then there is a storm to contend with and an improvised landing in a train car where she spends the night.
+<br>
+            <br>
+In the morning, Kiki arrives in a bustling and beautiful port city which she loves as soon as she sees it. After making an inauspicious start by causing several cars to collide, this eager young witch is given a job at a bakery by Osono, who is impressed with her flying skills. She lets her stay in the attic above the bakery and suggests she start a delivery service.
+<br>
+            <br>
+Kiki is delighted with the new life that unfolds for her. Her delivery service via broom is well-received except for one incident where she loses a toy. But even this setback has a bright side. Kiki meets Ursula, a very creative and independent artist who lives alone in the woods. The new witch in town is also befriended by Madame, who is impressed with her kindness and good cheer. Tombo, an enterprising young boy, takes a fancy to Kiki and even though she doesn't make it to a party he invites her to, they strike up a friendship.
+<br>
+            
+Despite all the good things that happen to her during this initiation period, Kiki still feels like an outsider. Part of her wants to be normal like other people. It is this internal questioning of her identity which causes her to lose her power to fly and her ability to talk to Jiji. When Ursula finds out about Kiki's plight, she takes her away to her artistic sanctuary so she can rediscover the inspiration she needs to complete her apprenticeship.
           </p>
         </div>
 
