--- a/ponyo.html
+++ b/ponyo.html
@@ -55,7 +55,7 @@
 
         <div class="text1 left text2">
 
-          <h3>❀Stats</h3>
+          <h3>❀Stats❀</h3>
           <ul style="list-style-type:circle;">
             <li>❀Date of release: July 23rd 2009</li>
             <li>❀Creator / Director: Hayao Miyazaki</li>
