--- a/kiki.html
+++ b/kiki.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Kiki's Delivery Service </title>
+  <title>Kiki's Delivery Service =^._.^=∫ </title>
   <meta charset="UTF-8" />
 </head>
 
@@ -18,7 +18,7 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home✧.*</a></li>
         <li><a href="totoro.html">☂Totoro☂</a></li>
         <li><a href="ponyo.html">Ponyo∘˚˳°∘°</a></li>
         <li><a href="kiki.html">Kiki =^._.^=∫</a></li>
