--- a/totoro.html
+++ b/totoro.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Ghibli Movies</title>
+  <title>My Neighbour Totoro☂</title>
   <meta charset="UTF-8" />
 </head>
 
@@ -20,7 +20,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home✧.*</a></li>
         <li><a href="totoro.html">☂Totoro☂</a></li>
         <li><a href="ponyo.html">Ponyo∘˚˳°∘°</a></li>
         <li><a href="kiki.html">Kiki =^._.^=∫</a></li>
