--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
         <h2 class="homepagetitle">
-          What is Ghibli?
+          *ੈ✩‧₊˚ What is Ghibli? ⋆.ೃ࿔*:･
         </h2>
 
 
@@ -68,7 +68,7 @@
 
 
         <h2 class="homepagetitle">
-          History
+          *ੈ✩‧₊˚ History ⋆.ೃ࿔*:･
         </h2>
 
 
