--- a/kiki.html
+++ b/kiki.html
@@ -36,7 +36,7 @@
       </div>
 
       <h2 class="totorotitle">
-        Information about the movie
+        *ੈ✩‧₊˚ Information about the movie ⋆.ೃ࿔*:･
       </h2>
 
 
@@ -85,7 +85,7 @@
 
 
       <h2 class="totorotitle">
-        Storyline
+        *ੈ✩‧₊˚ Storyline ⋆.ೃ࿔*:･
       </h2>
 
 
@@ -120,7 +120,7 @@ Despite all the good things that happen to her during this initiation period, Ki
       </div>
 
  <h2 class="totorotitle">
-        Making of the movie
+   *ੈ✩‧₊˚Characters ⋆.ೃ࿔*:･
       </h2>
 
 
