--- a/ponyo.html
+++ b/ponyo.html
@@ -39,7 +39,7 @@
       </div>
 
       <h2 class="subtitle">
-        Information about the movie
+        *ੈ✩‧₊˚ Information about the movie ⋆.ೃ࿔*:･
       </h2>
 
 
@@ -90,7 +90,7 @@
 <br>
 
       <h2 class="subtitle">
-        Storyline
+        *ੈ✩‧₊˚ Storyline ⋆.ೃ࿔*:･
       </h2>
 
 
@@ -127,7 +127,7 @@ The effects of Ponyo's stolen magic cause progressively worse effects, including
         <br>
         <br>
  <h2 class="subtitle">
-        Characters
+        *ੈ✩‧₊˚Characters ⋆.ೃ࿔*:･
       </h2>
 
 
@@ -151,18 +151,19 @@ alt="Sosuke, from 'Ponyo'"
 <div class="gallery">
     <img src="https://i.pinimg.com/564x/41/6d/8e/416d8e8d4dec1081a4493db21890f831.jpg" alt="Lisa, from 'Ponyo'" width="1050" height="400">
 
-  <div class="desc"> Lisa <br> リサ <br> Age: 25 </div>
+  <div class="desc"> Lisa, Sosuke's mother <br> リサ <br> Age: 25 </div>
 </div>
 
+        
 <div class="gallery">
     <img src="https://i.pinimg.com/564x/4c/77/47/4c7747022d1a3c25ac5c276c6cbef3e0.jpg" alt="Fujimoto, from 'Ponyo'" width="600" height="400">
-  <div class="desc">Fujimoto <br> フジモト <br> Age: 40+</div>
+  <div class="desc">Fujimoto, Ponyo's father <br> フジモト <br> Age: 40+</div>
 </div>
 
       <div class="gallery">
     <img src="https://i.pinimg.com/564x/78/e7/75/78e7755b5cd67b01ede5c53ed204602f.jpg" alt="Granmammare, from 'Ponyo'" width="600" height="400">
   <div class="desc">
-Granmammare <br> グランマンマーレ <br> Age: unknown </div>
+Granmammare, Ponyo's Mother <br> グランマンマーレ <br> Age: unknown </div>
 </div>
 
       </div>
